--- a/styles/AssetChooser.module.css
+++ b/styles/AssetChooser.module.css
@@ -5,6 +5,20 @@
   margin-bottom: 8px;
 }
 
+.assetNameContainer {
+  flex: 1;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.assetNameContainerInner {
+  flex: 1;
+
+  display: flex;
+  flex-direction: column;
+}
+
 .AssetChooser input {
   margin-bottom: 0;
 }
@@ -77,8 +91,6 @@
   background-color: white;
   border-radius: 10px;
   padding: 16px;
-  width: 400px;
-  height: 200px;
   display: flex;
   flex-direction: column;
 }
@@ -87,4 +99,14 @@
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 8px;
+}
+
+.modalInputWrapper>span {
+  color: gray;
+}
+
+.modalActionButtons {
+  display: flex;
+  gap: 15px;
+  justify-content: flex-end;
 }
