--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,13 +6,28 @@ body {
   font-family: sans-serif;
 }
 
-button {
+button.primary {
   all: unset;
   user-select: none;
   cursor: pointer;
 
   background-color: rgb(20 160 196);
-  color: white;
+  color: rgb(238, 251, 255);
+  padding: 10px 18px;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-weight: bold;
+}
+
+button.secondary {
+  all: unset;
+  user-select: none;
+  cursor: pointer;
+
+  background-color: rgb(227, 249, 255);
+  color: rgb(20 160 196);
   padding: 10px 18px;
   border-radius: 8px;
   display: flex;
@@ -37,7 +52,8 @@ label.inline-label {
 
 input[type="text"],
 input[type="number"],
-textarea {
+textarea,
+.input-wrapper {
   all: unset;
 
   padding: 10px;
@@ -48,4 +64,13 @@ textarea {
   border-radius: 5px;
 
   background-color: white;
+}
+
+.input-wrapper {
+  display: flex;
+}
+
+.input-wrapper>input {
+  all: unset;
+  flex: 1;
 }
