--- a/styles/AssetChooser.module.css
+++ b/styles/AssetChooser.module.css
@@ -2,7 +2,6 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  margin-bottom: 8px;
 }
 
 .assetNameContainer {
@@ -10,6 +9,8 @@
 
   display: flex;
   flex-direction: row;
+
+  gap: 8px;
 }
 
 .assetNameContainerInner {
@@ -17,10 +18,6 @@
 
   display: flex;
   flex-direction: column;
-}
-
-.AssetChooser input {
-  margin-bottom: 0;
 }
 
 .AssetChooser.hasResults:focus-within input {
