--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -5,14 +5,15 @@
   flex-direction: column;
 
   padding: 10px;
+  gap: 4px;
   overflow: auto;
 }
 
 .waypointsHeader {
   margin-left: 30px;
   margin-right: 30px;
-  margin-top: 15px;
-  margin-bottom: 8px;
+  margin-top: 10px;
+  margin-bottom: 4px;
   padding-bottom: 5px;
 
   text-transform: uppercase;
