--- a/styles/WaypointEditor.module.css
+++ b/styles/WaypointEditor.module.css
@@ -49,6 +49,7 @@ section.waypointExtraContent {
   padding-top: 8px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  gap: 4px;
 
   background-color: rgb(242, 254, 255);
 }
