--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,7 +42,7 @@ label {
 }
 
 label.inline-label {
-  margin-bottom: -11px;
+  margin-bottom: -9px;
   margin-left: 8px;
   padding: 0 2px;
   background-color: white;
@@ -57,8 +57,6 @@ textarea,
   all: unset;
 
   padding: 10px;
-  margin-top: 2px;
-  margin-bottom: 8px;
 
   border: 1px solid var(--input-decoration-color);
   border-radius: 5px;
@@ -73,4 +71,9 @@ textarea,
 .input-wrapper>input {
   all: unset;
   flex: 1;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
 }
