--- a/styles/globals.css
+++ b/styles/globals.css
@@ -77,3 +77,19 @@ textarea,
   display: flex;
   flex-direction: column;
 }
+
+.marker {
+  width: 32px;
+  height: 32px;
+  border-radius: 20px;
+  background-color: red;
+  color: white;
+  font-weight: bold;
+  border: 4px solid black;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+}
