--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ button.primary {
   user-select: none;
   cursor: pointer;
 
-  background-color: rgb(20 160 196);
+  background-color: rgb(20, 123, 196);
   color: rgb(238, 251, 255);
   padding: 10px 18px;
   border-radius: 8px;
@@ -19,6 +19,11 @@ button.primary {
   align-items: center;
   gap: 10px;
   font-weight: bold;
+}
+
+button.primary:disabled {
+  cursor: not-allowed;
+  background-color: rgb(128, 193, 240);
 }
 
 button.secondary {
@@ -34,6 +39,32 @@ button.secondary {
   align-items: center;
   gap: 10px;
   font-weight: bold;
+}
+
+button.secondary:disabled {
+  cursor: not-allowed;
+  background-color: rgb(227, 249, 255);
+  color: rgb(99, 203, 229);
+}
+
+button.danger {
+  all: unset;
+  user-select: none;
+  cursor: pointer;
+
+  background-color: rgb(196, 20, 20);
+  color: rgb(255, 238, 238);
+  padding: 10px 18px;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-weight: bold;
+}
+
+button.danger:disabled {
+  cursor: not-allowed;
+  background-color: rgb(240, 128, 128);
 }
 
 label {
