--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -2,6 +2,8 @@
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: auto 1fr;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .ProjectSidebar {
