--- a/styles/globals.css
+++ b/styles/globals.css
@@ -126,3 +126,19 @@ textarea,
   align-items: center;
   font-size: 18px;
 }
+
+.marker-control {
+  width: 24px;
+  height: 24px;
+  border-radius: 16px;
+  background-color: rgb(0, 204, 255);
+  color: white;
+  font-weight: bold;
+  border: 4px solid rgb(0, 64, 80);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+}
