--- a/styles/tour-editor/AddPointButton.module.css
+++ b/styles/tour-editor/AddPointButton.module.css
@@ -7,6 +7,10 @@
   z-index: 6;
 }
 
+.AddPointButton.AddPointButton.alwaysVisible {
+  margin: 4px 0;
+}
+
 .icon {
   display: flex;
   color: rgba(0, 0, 0, 0.25);
@@ -39,7 +43,8 @@
 }
 
 
-.AddPointButton:hover>.buttonContainer {
+.AddPointButton:hover>.buttonContainer,
+.AddPointButton.alwaysVisible>.buttonContainer {
   transform: scale(1);
 }
 
