--- a/styles/tour-editor/Sidebar.module.css
+++ b/styles/tour-editor/Sidebar.module.css
@@ -12,18 +12,41 @@
 }
 
 .waypointsHeader {
+  display: flex;
+  justify-content: center;
+  gap: 64px;
+
   margin-left: 30px;
   margin-right: 30px;
   margin-top: 10px;
   margin-bottom: 4px;
   padding-bottom: 5px;
 
-  text-transform: uppercase;
   text-align: center;
 
   font-size: 13px;
   color: rgb(54, 147, 170);
   border-bottom: 1px solid rgb(54, 147, 170);
+}
+
+.waypointsHeader>button {
+  all: unset;
+  user-select: none;
+  cursor: pointer;
+}
+
+.waypointsHeader>button:last-child,
+.waypointsHeader.pois>button:first-child {
+  color: rgb(160, 160, 160);
+}
+
+.waypointsHeader.pois>button:last-child {
+  color: rgb(54, 147, 170);
+}
+
+.waypointsList {
+  display: flex;
+  flex-direction: column;
 }
 
 .addWaypoint {
