--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,13 +68,14 @@ button.danger:disabled {
 }
 
 label {
-  font-size: 12px;
-  color: gray;
-  margin-left: 4px;
-  margin-bottom: 4px;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 2px;
+  display: block;
 }
 
 label.inline-label {
+  font-size: 12px;
   margin-bottom: -9px;
   margin-left: 8px;
   padding: 0 2px;
@@ -92,9 +93,9 @@ textarea,
   padding: 10px;
 
   border: 1px solid var(--input-decoration-color);
-  border-radius: 5px;
+  border-radius: 8px;
 
-  background-color: white;
+  background-color: rgb(252, 252, 252);
 }
 
 .input-wrapper {
@@ -104,6 +105,11 @@ textarea,
 .input-wrapper>input {
   all: unset;
   flex: 1;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
 }
 
 .column {
