--- a/styles/TourEditor.module.css
+++ b/styles/TourEditor.module.css
@@ -2,12 +2,18 @@
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: auto 1fr;
+  height: 100vh;
 }
 
 .Subpanel {
   display: grid;
   grid-template-rows: auto 1fr;
   grid-template-columns: 1fr;
+  height: 100vh;
+}
+
+.tourPanelContainer {
+  overflow: auto;
 }
 
 .subpanelBar {
