Modify gallery item to look more like waypoint list item

--- a/otb_editor/index.css
+++ b/otb_editor/index.css
@@ -18,8 +18,8 @@ label {
   display: block;
 }
 
-input[type="text"],
-input[type="number"],
+:where(input[type="text"]),
+:where(input[type="number"]),
 textarea {
   all: unset;
 
