--- a/otb_editor/Gallery.module.css
+++ b/otb_editor/Gallery.module.css
@@ -1,20 +1,23 @@
 .Gallery {
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   gap: 8px;
 }
 
 .GalleryItem {
   display: grid;
-  grid-template-columns: 64px 1fr 1fr 1fr 1fr;
-  grid-template-rows: 32px 32px;
+  grid-template-columns: 48px 1fr auto auto auto auto;
+  grid-template-rows: 48px;
 
-  gap: 4px;
+  background-color: rgb(203, 233, 254);
+  color: rgb(11, 58, 91);
+  border-radius: 12px;
+  padding-right: 8px;
 }
 
 .GalleryItemThumbnail {
-  grid-row: 1 / 3;
   grid-column: 1;
 
   display: flex;
@@ -24,9 +27,9 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 16px;
+  border-top-left-radius: 12px;
+  border-bottom-left-radius: 12px;
   cursor: zoom-in;
-  background-color: rgb(233, 233, 233);
 }
 
 .GalleryItemThumbnail.Error {
@@ -34,6 +37,18 @@
 }
 
 .GalleryItemInput {
-  grid-row: 1 !important;
-  grid-column: 2 / 6 !important;
+  all: unset;
+
+  grid-row: 1 / 3;
+  grid-column: 2;
+  width: 100%;
+  margin-left: 8px;
+}
+
+.GalleryItemButton {
+  all: unset;
+  cursor: pointer;
+  user-select: none;
+
+  padding: 12px 8px;
 }
