--- a/otb_editor/pages/project/TourEditor.module.css
+++ b/otb_editor/pages/project/TourEditor.module.css
@@ -1,6 +1,5 @@
 .TourEditor {
   display: grid;
-  grid-template-rows: 1fr;
-  grid-template-columns: auto 1fr;
-  height: 100vh;
+  grid-template-rows: minmax(0, 1fr);
+  grid-template-columns: auto minmax(0, 1fr);
 }
