--- a/otb_editor/pages/project/TourEditorPanel.module.css
+++ b/otb_editor/pages/project/TourEditorPanel.module.css
@@ -84,7 +84,7 @@
   display: grid;
   grid-template-rows: auto 1fr;
   grid-template-columns: 1fr;
-  height: 100vh;
+  height: 100%;
 }
 
 .SubPanel.Hidden {
