--- a/otb_editor/pages/project/ProjectAssetsEditor.module.css
+++ b/otb_editor/pages/project/ProjectAssetsEditor.module.css
@@ -31,7 +31,7 @@
     display: flex;
 }
 
-.AssetCard>img {
+.AssetThumbnail {
     cursor: pointer;
     object-fit: cover;
     width: 192px;
@@ -39,6 +39,10 @@
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
     border-bottom: 1px solid gray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 96px;
 }
 
 .AssetButton {
