--- a/otb_editor/Navbar.module.css
+++ b/otb_editor/Navbar.module.css
@@ -18,19 +18,33 @@
   all: unset;
   cursor: pointer;
   user-select: none;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 600;
-  color: rgb(94, 94, 94);
+  color: rgb(12, 162, 193);
 }
 
 .NavHeader {
-  font-size: 18px;
-  color: rgb(63, 63, 63);
+  font-size: 22px;
   margin-right: 24px;
+  color: transparent;
+  background-image: linear-gradient(90deg, rgb(69, 105, 224) 0%, rgb(12, 162, 193) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .NavButton:hover {
   text-decoration: underline 2px;
+}
+
+.AdminPanelButton {
+  color: rgb(187, 187, 187);
+  font-size: 18px;
+  margin-right: 20px;
+}
+
+.LogOutButton {
+  color: rgb(246, 33, 101);
 }
 
 .Main {
