Some UI changes, finish project member editing

--- a/tf_editor/pages/project/ProjectManager.module.css
+++ b/tf_editor/pages/project/ProjectManager.module.css
@@ -5,7 +5,10 @@
   gap: 16px;
   overflow: scroll;
 
-  max-width: 400px;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  margin: auto;
 }
 
 .Members {
