--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -1,37 +1,78 @@
 .Home {
-  display: flex;
-  align-items: center;
+  width: 70vw;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   justify-content: center;
+  align-items: center;
 }
 
 .Welcome {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  max-width: 800px;
-  text-align: center;
+  align-items: stretch;
+  max-width: 700px;
+  font-size: 18px;
+  gap: 16px;
 }
 
 .Welcome>header {
   font-size: 48px;
   color: rgb(95, 95, 95);
   font-weight: bold;
+  text-align: center;
+  margin: 0;
 }
 
 .Welcome>p {
-  font-size: 20px;
   line-height: 1.5;
+  margin: 0;
+}
+
+.CreateLoadButtons {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 12px;
 }
 
 .Projects {
-  min-width: 250px;
+  max-width: 500px;
+  min-width: 400px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: stretch;
   gap: 12px;
 }
 
-.Projects>* {
-  font-size: 18px;
-  padding: 12px 20px;
+.ProjectCard {
+  display: flex;
+  background-color: rgb(203, 233, 254);
+  color: rgb(11, 58, 91);
+  border-radius: 12px;
+  padding: 0 8px;
+  height: 48px;
+}
+
+.ProjectName {
+  flex: 1;
+
+  padding: 12px 8px;
+}
+
+.ProjectButton {
+  all: unset;
+  cursor: pointer;
+  user-select: none;
+
+  padding: 12px 8px;
+}
+
+.ProjectsButtons {
+  width: 350px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  gap: 12px;
 }
